--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 </body>
 </html>
 <script>
-    window.location.href = "./acesso-gratis/index.html";
+    window.location.href = "acesso-gratis/index.html";
 </script>
