--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=./acesso-gratis%20/index.html">
     <title>New</title>
 </head>
 <body>
@@ -11,6 +12,3 @@
     </main>
 </body>
 </html>
-<script>
-    window.location.href = window.location.origin + "/new/acesso-gratis/index.html";
-</script>
