--- a/acesso-gratis/index.html
+++ b/acesso-gratis/index.html
@@ -424,7 +424,7 @@
     tempo--;
     if (tempo < 0) {
       clearInterval(cronometro);
-      contador.innerText = "Tempo esgotado!";
+      contador.innerText = "Escolha Agora!";
     }
   }, 1000);
 </script>
