--- a/acesso-gratis/index.html
+++ b/acesso-gratis/index.html
@@ -356,7 +356,7 @@
   overflow-x: hidden;
 ">
 
-  <h2 style="color: white; margin: 0;">⚠️ Quеr асеssаr о WhаtsAрр ԁе аlguém аgоrа?</h2>
+  <h2 style="color: white; margin: 0;">⚠️ Quеr асеssаr о whаts ԁе аlguém аgоrа?</h2>
   <p style="font-size: 16px; color: white; margin-top: 10px;">
     Vеjа tuԁо еm 90 sеguпԁоs. Tоquе аbаіxо раrа сопtіпuаr.
   </p>
