--- a/acesso-gratis/index.html
+++ b/acesso-gratis/index.html
@@ -393,7 +393,7 @@
     
     <!--link-->
 
-    <a href=../new/index.html" style="
+    <a href="../new/index.html" style="
       flex: 1;
       padding: 10px 0;
       background: #ffc107;
